# Notepad

./: Bang.cpp  Budget.cpp  BudgetGUI.cpp  BudgetPlanner-x86_64-Linux  BudgetPlanner.cpp  BudgetQt.cpp  BudgetQt.pro  BudgetSystem  BudgetSystem.cpp  CMakeLists.txt  Engine.cpp  InventoryManagementSystem-x86_64-Linux  InventoryManagementSystem-x86_64-mac  LICENSE  Makefile  Notepad-x86_641  Notepad.pro  README.md  TicTacToe.cpp  addbang.py  budget  cls  cls.cpp  cube  install.sh  jar2app.py  raylib.cpp  rotatingcube.cpp  run_bang.sh  snake  test_script  uninstall.sh
BCS/: 3D.html  Ball.html  BudgetPlannerForm.cs  Bulb.html  Wall.html  budget_data.txt  index.html  sketch.js
BCS/BudgetPlanner/: BudgetPlanner.cs  Mandelbulb.html  spot.js
LICENSING/: JavaAppLauncher.txt
Tic/: Makefile
data/: customers.txt  products.txt  sales.txt  suppliers.txt
include/: Budgetplanner.hpp
